[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "allus-company-data"
version = "0.0.2"
description = "Reference Python SDK for the allus company-data API: typed, plaintext, slug-keyed conclusions with transparent decryption."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "allme.fyi" }]
keywords = ["allus", "allme", "company-data", "sdk"]
dependencies = [
    "cryptography>=42",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.urls]
Homepage = "https://github.com/allus-fyi/company-data-python"
Repository = "https://github.com/allus-fyi/company-data-python"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
